# Clarabel.cpp

./: CMakeLists.txt  README.md
examples/c/: CMakeLists.txt
examples/cpp/: CMakeLists.txt
include/: Clarabel.h
rust_wrapper/: CMakeLists.txt  Cargo.toml
tests/: CMakeLists.txt
